<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vertical_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="5"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutLinear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="gravity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_1"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_2"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_3"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_0"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLinear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="gravity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="4"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_5"

                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_6"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_period"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_period"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLinear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="gravity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_7"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_8"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="@string/button_9"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="="
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLinear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="gravity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="+"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="-"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="/"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/button_number_width"
                android:layout_height="@dimen/button_number_height"
                android:gravity="center_vertical"
                android:text="X"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>